updated readme and humans.txt to reflect the use of normalize.css, pre code sections now allow to optionally add a white background and pull it to the left on mobile screens to make use of nearly the full available space, added those features to some of the blog posts, fixed issue with blockquotes due to removal of uikit

--- a/_sass/blog/_blog-font.scss
+++ b/_sass/blog/_blog-font.scss
@@ -245,8 +245,8 @@ h6 + div>pre {
 
 pre {
   white-space: pre-wrap;
-  margin-top: 20px;
-  background: white;
+  margin: 1rem 0;
+  background: none;
   border-radius: 2px;
   overflow: auto;
   border: none;
@@ -258,8 +258,6 @@ pre {
   line-height: 1.5em;
   tab-size: 4;
   overflow: auto;
-  width: calc(100% - 20px + 2 * 15px);
-  margin-left: -15px;
   code {
     font-family: $mono;
     white-space: pre;
@@ -267,6 +265,15 @@ pre {
   }
   @include media-query($xtra-small){
     padding: 20px;
+  };
+}
+
+.block pre {
+  margin: 2rem 0;
+  width: calc(100% - 20px + 2 * 15px);
+  margin-left: -15px;
+  background: white;
+  @include media-query($xtra-small){
     margin-left: 0;
     width: unset;
   };
@@ -477,6 +484,7 @@ p.quote {
 
 blockquote { //overwriting ukit
   font-size: 1rem;
+  margin: 0 0 20px 0;
 }
 
 .bk-blog-style blockquote p {
@@ -676,23 +684,23 @@ p.intro a:after {
   width: calc(100% + 50px);
   margin-left: -25px;
   p {
-    margin: 1.5rem;
+    margin: 1.1rem;
     font-size: 0.85rem;
     line-height: 1.7em;
     &:first-of-type {
-      margin-top: 1.5rem;
+      margin-top: 1.1rem;
     }
     &:last-of-type {
-      padding-bottom: 1.5rem;
+      padding-bottom: 1.1rem;
       margin-bottom: 0;
     }
     @include media-query($xtra-small){
       margin: 1rem 2rem;
       &:first-of-type {
-        margin-top: 2rem;
+        margin-top: 1.1rem;
       }
       &:last-of-type {
-        padding-bottom: 2rem;
+        padding-bottom: 1.1rem;
       }
     };
   }
@@ -700,9 +708,6 @@ p.intro a:after {
     font-size: 0.85rem;
     @include underline($blog-font-color, white);
   }
-  @include media-query($small){
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  };
   @include media-query($medium){
     margin-left: -2rem;
     width: calc(100% + 4rem);
@@ -710,29 +715,30 @@ p.intro a:after {
 }
 
 .info_bar {
-  @include display_flex;
   .info_bar__title {
-    p {
+    padding-top: 2rem;
+    h3 {
       text-transform: uppercase;
       padding: 0;
     }
   }
   .info_bar__sub {
-    p {
+    padding-bottom: 2rem;
+    h3 {
       margin-top: 0;
     }
   }
-  p {
-    //margin: 15px !important;
+  h3 {
     line-height: 1em;
     font-family: $mono;
     font-weight: 600;
     color: $accent-two;
     font-size: 0.6rem;
     letter-spacing: 0.14em;
-  }
-  &.info_bar_sub {
-    @include justify-content(flex-end);
+    margin: 0 1.1rem;
+    @include media-query($xtra-small){
+      margin: 0 2rem;
+    }
   }
 }
 
